--- a/index.html
+++ b/index.html
@@ -314,13 +314,24 @@
                         const article = document.createElement('article');
                         article.className = 'py-10 border-b border-gray-100 first:pt-0 fade-up is-visible';
                         
-                        let pdfAction = item.pdfData ? `
+                        let actionHtml = '';
+                        if (item.pdfData) {
+                            actionHtml = `
                             <div class="mt-6">
                                 <button onclick="downloadPDF('${item.pdfData}', '${item.title}.pdf')" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
                                     <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> View Full Report
                                 </button>
                             </div>
-                        ` : '';
+                            `;
+                        } else if (item.url) {
+                            actionHtml = `
+                            <div class="mt-6">
+                                <a href="${item.url}" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
+                                    <i data-lucide="external-link" class="w-3.5 h-3.5 mr-2"></i> View External Link
+                                </a>
+                            </div>
+                            `;
+                        }
 
                         article.innerHTML = `
                             <div class="flex items-center gap-4 mb-4">
@@ -329,7 +340,7 @@
                             </div>
                             <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">${item.title}</h4>
                             <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">${item.summary}</p>
-                            ${pdfAction}
+                            ${actionHtml}
                         `;
                         list.appendChild(article);
                     });
