--- a/index.html
+++ b/index.html
@@ -123,7 +123,14 @@
                     </div>
                     <div class="lg:col-span-8">
                         <div id="report-list" class="space-y-0">
-                            <!-- レポートを手動で追加する場所 -->
+                            <div class="report-item">
+  <div class="report-meta">2026.02.23</div>
+  <h3 class="report-title">実態に即した対中戦略</h3>
+  <p class="report-desc">要旨：対中戦略に関する政策オプションを整理し、論点とシナリオを提示。</p>
+  <a class="report-link" href="./https://github.com/bridge55710-hue/CJ-Lab/blob/main/docs/%E5%AE%9F%E6%85%8B%E3%81%AB%E5%8D%B3%E3%81%97%E3%81%9F%E5%AF%BE%E4%B8%AD%E6%88%A6%E7%95%A5.pdf" target="_blank" rel="noopener">
+    PDFを開く
+  </a>
+</div>
                             <article class="py-10 border-b border-gray-100 first:pt-0 fade-up is-visible">
                                 <div class="flex items-center gap-4 mb-4">
                                     <span class="text-xs font-mono font-bold text-gray-400">2026.02.23</span>
