--- a/index.html
+++ b/index.html
@@ -122,47 +122,36 @@
                         </p>
                     </div>
                     <div class="lg:col-span-8">
+                        <!-- レポートリスト開始 -->
                         <div id="report-list" class="space-y-0">
-                            <div class="report-item">
-  <div class="report-meta">2026.02.23</div>
-  <h3 class="report-title">実態に即した対中戦略</h3>
-  <p class="report-desc">要旨：対中戦略に関する政策オプションを整理し、論点とシナリオを提示。</p>
-  <a class="report-link" href="./https://github.com/bridge55710-hue/CJ-Lab/blob/main/docs/%E5%AE%9F%E6%85%8B%E3%81%AB%E5%8D%B3%E3%81%97%E3%81%9F%E5%AF%BE%E4%B8%AD%E6%88%A6%E7%95%A5.pdf" target="_blank" rel="noopener">
-    PDFを開く
-  </a>
-</div>
-                            <article class="py-10 border-b border-gray-100 first:pt-0 fade-up is-visible">
-                                <div class="flex items-center gap-4 mb-4">
-                                    <span class="text-xs font-mono font-bold text-gray-400">2026.02.23</span>
-                                    <span class="text-[9px] font-bold text-navy border border-navy/10 px-2 py-0.5 rounded-sm">POLICY</span>
-                                </div>
-                                <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">日中経済安保の再構築に関する緊急提言</h4>
-                                <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">
-                                    サプライチェーンの多様化と相互依存のバランスをどのように保つべきか、最新のデータに基づき分析しました。
-                                </p>
-                                <div class="mt-6">
-                                    <a href="docs/report1.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
-                                        <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> View Full Report (PDF)
-                                    </a>
-                                </div>
-                            </article>
+                            
+                            <!-- 
+                                レポートを追加する場合は、以下のテンプレートをここ（report-listの中）に貼り付けてください:
+                                
+                                <article class="py-10 border-b border-gray-100 first:pt-0 fade-up">
+                                    <div class="flex items-center gap-4 mb-4">
+                                        <span class="text-xs font-mono font-bold text-gray-400">YYYY.MM.DD</span>
+                                        <span class="text-[9px] font-bold text-navy border border-navy/10 px-2 py-0.5 rounded-sm">CATEGORY</span>
+                                    </div>
+                                    <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">タイトルをここに入力</h4>
+                                    <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">
+                                        概要文をここに入力してください。
+                                    </p>
+                                    <div class="mt-6">
+                                        <a href="docs/ファイル名.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
+                                            <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> PDFを見る
+                                        </a>
+                                    </div>
+                                </article>
+                            -->
 
-                            <article class="py-10 border-b border-gray-100 fade-up is-visible">
-                                <div class="flex items-center gap-4 mb-4">
-                                    <span class="text-xs font-mono font-bold text-gray-400">2026.01.15</span>
-                                    <span class="text-[9px] font-bold text-navy border border-navy/10 px-2 py-0.5 rounded-sm">INSIGHT</span>
-                                </div>
-                                <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">半導体産業における地政学的リスク評価</h4>
-                                <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">
-                                    東アジアの半導体エコシステムに対する地政学的変化の影響を考察したレポートです。
-                                </p>
-                                <div class="mt-6">
-                                    <a href="docs/report2.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
-                                        <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> View Full Report (PDF)
-                                    </a>
-                                </div>
-                            </article>
+                            <!-- レポートがない時のメッセージ -->
+                            <div class="py-10 text-center bg-white/50 border border-dashed border-gray-200 rounded-sm">
+                                <p class="text-sm text-gray-400 font-light">現在、公開中のレポートはありません。</p>
+                            </div>
+
                         </div>
+                        <!-- レポートリスト終了 -->
                     </div>
                 </div>
             </div>
@@ -220,15 +209,19 @@
             </div>
         </section>
 
-        <!-- Admin Section (HTML Only Version) -->
+        <!-- Staff Terminal Section -->
         <section id="admin-section" class="py-24 bg-gray-50 border-t border-gray-100">
             <div class="max-w-3xl mx-auto px-4 text-center">
                 <div class="bg-white p-10 border border-gray-200 shadow-sm rounded-sm">
                     <h3 class="text-xs font-bold text-gray-400 tracking-[0.3em] uppercase mb-4">Staff Terminal</h3>
-                    <p class="text-sm text-gray-600 mb-8 leading-relaxed">
-                        現在の設定：GitHubリポジトリ内の <code>docs</code> フォルダにPDFをアップロードし、<br>
-                        HTMLコード内の <code>report-list</code> 部分に記事を手動で追加してください。
-                    </p>
+                    <div class="text-left space-y-4 text-sm text-gray-600 leading-relaxed mb-8">
+                        <p class="font-bold text-navy">【更新手順】</p>
+                        <ol class="list-decimal list-inside space-y-2">
+                            <li>GitHubリポジトリ内に <code>docs</code> フォルダを作成しPDFをアップ。</li>
+                            <li>このHTMLの <code>report-list</code> 内にテンプレートを貼り付け。</li>
+                            <li>日付、タイトル、リンク先（例：<code>docs/report.pdf</code>）を書き換え。</li>
+                        </ol>
+                    </div>
                     <button id="admin-logout" class="text-[10px] font-bold text-red-400 hover:text-red-600 uppercase tracking-widest">Logout</button>
                 </div>
             </div>
@@ -245,7 +238,7 @@
     <!-- Login Modal -->
     <div id="login-modal" class="fixed inset-0 bg-navy/90 backdrop-blur-sm z-[100] hidden flex items-center justify-center">
         <div class="bg-white p-8 md:p-10 rounded-sm shadow-2xl max-w-sm w-full mx-4 relative">
-            <button id="close-modal" class="absolute top-4 right-4 text-gray-400 hover:text-navy">
+            <button id="close-modal" class="absolute top-4 right-4 text-gray-400 hover:text-navy transition-colors">
                 <i data-lucide="x" class="w-5 h-5"></i>
             </button>
             <div class="flex items-center justify-center w-12 h-12 bg-surface rounded-full mb-6 mx-auto text-navy">
@@ -256,13 +249,13 @@
             <form id="login-form" class="space-y-4">
                 <input type="password" id="staff-password" class="w-full px-4 py-3 bg-surface border border-gray-200 focus:border-navy focus:outline-none text-sm rounded-sm text-center" placeholder="PASSWORD">
                 <button type="submit" class="w-full bg-navy text-white py-3 font-bold text-xs uppercase tracking-[0.2em] hover:bg-navy-light transition-all rounded-sm">Login</button>
-                <p id="login-error" class="text-red-500 text-xs mt-2 hidden text-center">パスワードが違います。</p>
+                <p id="login-error" class="text-red-500 text-xs mt-2 hidden text-center font-bold">パスワードが違います。</p>
             </form>
         </div>
     </div>
 
     <script>
-        // Lucide Icons
+        // Lucide
         lucide.createIcons();
 
         // Simple Auth Logic
@@ -300,7 +293,7 @@
             window.scrollTo({ top: 0, behavior: 'smooth' });
         });
 
-        // Scroll Animation
+        // Intersection Observer
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => { if (entry.isIntersecting) entry.target.classList.add('is-visible'); });
         }, { threshold: 0.1 });
