--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                                         <span class="text-xs font-mono font-bold text-gray-400">YYYY.MM.DD</span>
                                         <span class="text-[9px] font-bold text-navy border border-navy/10 px-2 py-0.5 rounded-sm">CATEGORY</span>
                                     </div>
-                                    <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">タイトルをここに入力</h4>
+                                    <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">実態に即した対中戦略</h4>
                                     <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">
-                                        概要文をここに入力してください。
+                                        中国の実態を冷静に分析し、我が国や日本企業が取るべき戦略を示した。
                                     </p>
                                     <div class="mt-6">
-                                        <a href="docs/ファイル名.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
+                                        <a href="docs/https://github.com/bridge55710-hue/CJ-Lab/blob/main/docs/%E5%AE%9F%E6%85%8B%E3%81%AB%E5%8D%B3%E3%81%97%E3%81%9F%E5%AF%BE%E4%B8%AD%E6%88%A6%E7%95%A5.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
                                             <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> PDFを見る
                                         </a>
                                     </div>
