--- a/index.html
+++ b/index.html
@@ -125,10 +125,22 @@
                         <!-- レポートリスト開始 -->
                         <div id="report-list" class="space-y-0">
                             
-                            <!-- レポートがない時のメッセージ -->
-                            <div class="py-10 text-center bg-white/50 border border-dashed border-gray-200 rounded-sm">
-                                <p class="text-sm text-gray-400 font-light">現在、公開中のレポートはありません。</p>
-                            </div>
+                            <!-- 記事 1 -->
+                            <article class="py-10 border-b border-gray-100 first:pt-0 fade-up">
+                                <div class="flex items-center gap-4 mb-4">
+                                    <span class="text-xs font-mono font-bold text-gray-400">2026.02.23</span>
+                                    <span class="text-[9px] font-bold text-navy border border-navy/10 px-2 py-0.5 rounded-sm">POLICY</span>
+                                </div>
+                                <h4 class="text-xl md:text-2xl font-serif font-medium text-navy mb-4">実態に即した対中戦略</h4>
+                                <p class="text-gray-500 text-sm font-light leading-relaxed max-w-4xl">
+                                    日中関係の実態を多角的な視点から分析し、今後の戦略的アプローチを提言します。
+                                </p>
+                                <div class="mt-6">
+                                    <a href="docs/%E5%AE%9F%E6%85%8B%E3%81%AB%E5%8D%B3%E3%81%97%E3%81%9F%E5%AF%BE%E4%B8%AD%E6%88%A6%E7%95%A5.pdf" target="_blank" class="inline-flex items-center text-[10px] font-bold text-navy border-b border-navy/20 pb-1 uppercase tracking-widest hover:text-navy-light transition-all">
+                                        <i data-lucide="file-text" class="w-3.5 h-3.5 mr-2"></i> PDFを見る
+                                    </a>
+                                </div>
+                            </article>
 
                         </div>
                         <!-- レポートリスト終了 -->
